--- a/aws-readmore.html
+++ b/aws-readmore.html
@@ -142,14 +142,14 @@
        
     <!-- Blog Post Content -->
     <section class="blog-container">
-        <h1 class="blog-title">Python Programming</h1>
+        <h1 class="blog-title">AWS Services</h1>
         <p class="blog-meta">Posted on <strong>Dec 20, 2024</strong> by <strong>Sushan Khatri</strong></p>
         <div class="blog-content">
-            <h3>Mastering Python: Tips and Tricks for Beginners</h3>
-            <p>Python is one of the easiest programming languages to learn, making it perfect for beginners. In this post, you’ll discover tips to boost your learning, such as writing clean, readable code, practicing regularly, and exploring Python’s extensive libraries. We’ll also walk you through building a simple project to put your skills into action.</p>
-            <img src="assets/img/ai-ml.jpg" alt="Blog Post Image">
-            <h3>10 Must-Know Python Libraries for Developers</h3>
-            <p>Python’s versatility lies in its libraries. Whether you're developing web applications, analyzing data, or working with AI, libraries like NumPy, Pandas, and Flask are invaluable. This article dives deep into 10 libraries you must explore to maximize your efficiency and productivity as a Python developer.</p>
+            <h3>AWS Explained: A Beginner’s Guide to Cloud Computing</h3>
+            <p>Amazon Web Services (AWS) offers powerful cloud computing tools for businesses and developers. In this post, we’ll break down key AWS services like EC2 for virtual servers, S3 for cloud storage, and RDS for databases. Learn how AWS makes managing IT infrastructure easier and more efficient.</p>
+            <img src="assets/img/aws-servies.png" alt="Blog Post Image">
+            <h3>Getting Started with AWS Lambda: Serverless Made Simple</h3>
+            <p>AWS Lambda lets you run code without worrying about managing servers. This blog explains how to create serverless applications, with step-by-step instructions on setting up your first Lambda function. Learn how this revolutionary service can save you time and money.</p>
         </div>
         <div class="back-button" onclick="goBack()">Back to Blog</div>
     </section>
