--- a/blog.html
+++ b/blog.html
@@ -65,26 +65,26 @@
             <img src="assets/img/ai-ml.jpg" alt="Post 1" class="blog-thumbnail">
             <h3 class="blog-title">Artificial Intelligence / Machine Learning (AI/ML)</h3>
             <p class="blog-excerpt">Explore the basics of AI and machine learning in simple terms, and learn how they impact our daily lives.</p>
-            <a href="readmore.html" class="btn btn-secondary">Read More</a>
+            <a href="aws-readmore.html" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
             <img src="assets/img/python.jpeg" alt="Post 2" class="blog-thumbnail">
             <h3 class="blog-title">Python Programming</h3>
             <p class="blog-excerpt">Learn essential tips and techniques to get started with Python programming, from understanding syntax to building your first project.</p>
-            <a href="#" class="btn btn-secondary">Read More</a>
+            <a href="pyhton-readme.html" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
             <img src="assets/img/web-development.png" alt="Post 3" class="blog-thumbnail">
             <h3 class="blog-title">Web Development</h3>
             <p class="blog-excerpt">Stay ahead of the curve with the latest trends in web development, from frameworks to design principles.</p>
-            <a href="#" class="btn btn-secondary">Read More</a>
+            <a href="web-dev-readmore.html" class="btn btn-secondary">Read More</a>
         </div>
 
         <div class="blog-post">
             <img src="assets/img/aws-servies.png" alt="Post 3" class="blog-thumbnail">
             <h3 class="blog-title">AWS Services</h3>
             <p class="blog-excerpt">Learn the basics of Amazon Web Services (AWS), its key offerings, and how it’s transforming cloud computing for businesses and developers.</p>
-            <a href="#" class="btn btn-secondary">Read More</a>
+            <a href="aws-readmore.html" class="btn btn-secondary">Read More</a>
         </div>
         <div class="blog-post">
             <img src="assets/img/ict.jpg" alt="Post 3" class="blog-thumbnail">
