--- a/ict-readmore.html
+++ b/ict-readmore.html
@@ -142,14 +142,14 @@
        
     <!-- Blog Post Content -->
     <section class="blog-container">
-        <h1 class="blog-title">Python Programming</h1>
+        <h1 class="blog-title">Bachelor of Information Communication and Technology (BICT)</h1>
         <p class="blog-meta">Posted on <strong>Dec 20, 2024</strong> by <strong>Sushan Khatri</strong></p>
         <div class="blog-content">
-            <h3>Mastering Python: Tips and Tricks for Beginners</h3>
-            <p>Python is one of the easiest programming languages to learn, making it perfect for beginners. In this post, you’ll discover tips to boost your learning, such as writing clean, readable code, practicing regularly, and exploring Python’s extensive libraries. We’ll also walk you through building a simple project to put your skills into action.</p>
-            <img src="assets/img/ai-ml.jpg" alt="Blog Post Image">
-            <h3>10 Must-Know Python Libraries for Developers</h3>
-            <p>Python’s versatility lies in its libraries. Whether you're developing web applications, analyzing data, or working with AI, libraries like NumPy, Pandas, and Flask are invaluable. This article dives deep into 10 libraries you must explore to maximize your efficiency and productivity as a Python developer.</p>
+            <h3>What Can You Do with a Degree in Information Communication Technology?</h3>
+            <p>A BICT degree opens doors to careers in programming, networking, cybersecurity, and IT management. This post explores various roles, industry demands, and how you can leverage your degree to land exciting jobs in tech.</p>
+            <img src="assets/img/ict.jpg" alt="Blog Post Image">
+            <h3>Internship Tips for BICT Students: How to Land Your Dream Role</h3>
+            <p>Internships are a great way to gain experience and kickstart your career. In this post, we’ll share tips on finding the right internship, preparing for interviews, and making a lasting impression during your time as an intern.</p>
         </div>
         <div class="back-button" onclick="goBack()">Back to Blog</div>
     </section>
