--- a/web-dev-readmore.html
+++ b/web-dev-readmore.html
@@ -142,14 +142,14 @@
        
     <!-- Blog Post Content -->
     <section class="blog-container">
-        <h1 class="blog-title">Python Programming</h1>
+        <h1 class="blog-title">Web Development</h1>
         <p class="blog-meta">Posted on <strong>Dec 20, 2024</strong> by <strong>Sushan Khatri</strong></p>
         <div class="blog-content">
-            <h3>Mastering Python: Tips and Tricks for Beginners</h3>
-            <p>Python is one of the easiest programming languages to learn, making it perfect for beginners. In this post, you’ll discover tips to boost your learning, such as writing clean, readable code, practicing regularly, and exploring Python’s extensive libraries. We’ll also walk you through building a simple project to put your skills into action.</p>
+            <h3>Web Development Trends in 2024: What You Need to Know</h3>
+            <p>The web development world evolves quickly, and staying updated is crucial. This post covers the latest trends, including the rise of no-code platforms, advancements in responsive design, and the growing popularity of tools like Next.js and Tailwind CSS. Get ready to future-proof your skills!</p>
             <img src="assets/img/ai-ml.jpg" alt="Blog Post Image">
-            <h3>10 Must-Know Python Libraries for Developers</h3>
-            <p>Python’s versatility lies in its libraries. Whether you're developing web applications, analyzing data, or working with AI, libraries like NumPy, Pandas, and Flask are invaluable. This article dives deep into 10 libraries you must explore to maximize your efficiency and productivity as a Python developer.</p>
+            <h3>Building Your First Website: A Step-by-Step Guide for Beginners</h3>
+            <p>Creating a website from scratch can be exciting! In this post, you’ll learn how to set up a basic website using HTML, CSS, and JavaScript. From structuring your content to styling and adding interactivity, this guide ensures you’ll build a project you can proudly showcase.</p>
         </div>
         <div class="back-button" onclick="goBack()">Back to Blog</div>
     </section>
