--- a/pyhton-readme.html
+++ b/pyhton-readme.html
@@ -147,7 +147,7 @@
         <div class="blog-content">
             <h3>Mastering Python: Tips and Tricks for Beginners</h3>
             <p>Python is one of the easiest programming languages to learn, making it perfect for beginners. In this post, you’ll discover tips to boost your learning, such as writing clean, readable code, practicing regularly, and exploring Python’s extensive libraries. We’ll also walk you through building a simple project to put your skills into action.</p>
-            <img src="assets/img/ai-ml.jpg" alt="Blog Post Image">
+            <img src="assets/img/python.jpeg" alt="Blog Post Image">
             <h3>10 Must-Know Python Libraries for Developers</h3>
             <p>Python’s versatility lies in its libraries. Whether you're developing web applications, analyzing data, or working with AI, libraries like NumPy, Pandas, and Flask are invaluable. This article dives deep into 10 libraries you must explore to maximize your efficiency and productivity as a Python developer.</p>
         </div>
