--- a/web-dev-readmore.html
+++ b/web-dev-readmore.html
@@ -147,7 +147,7 @@
         <div class="blog-content">
             <h3>Web Development Trends in 2024: What You Need to Know</h3>
             <p>The web development world evolves quickly, and staying updated is crucial. This post covers the latest trends, including the rise of no-code platforms, advancements in responsive design, and the growing popularity of tools like Next.js and Tailwind CSS. Get ready to future-proof your skills!</p>
-            <img src="assets/img/ai-ml.jpg" alt="Blog Post Image">
+            <img src="assets/img/web-development.png" alt="Blog Post Image">
             <h3>Building Your First Website: A Step-by-Step Guide for Beginners</h3>
             <p>Creating a website from scratch can be exciting! In this post, you’ll learn how to set up a basic website using HTML, CSS, and JavaScript. From structuring your content to styling and adding interactivity, this guide ensures you’ll build a project you can proudly showcase.</p>
         </div>
