--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
         <div class="nav-container">
             <!-- Logo Section -->
             <div class="logo">
-                <a href="#home">Sushan Khatri</a>
+                <a href="index.html">Sushan Khatri</a>
             </div>
 
             <!-- Theme Toggle Button -->
