--- a/web-dev-readmore.html
+++ b/web-dev-readmore.html
@@ -151,6 +151,11 @@
             <h3>Building Your First Website: A Step-by-Step Guide for Beginners</h3>
             <p>Creating a website from scratch can be exciting! In this post, you’ll learn how to set up a basic website using HTML, CSS, and JavaScript. From structuring your content to styling and adding interactivity, this guide ensures you’ll build a project you can proudly showcase.</p>
         </div>
+        <ul>
+            <li><a href="webdevdocs/htmldocs.html">HTML Documentation</a></li>
+            <li><a href="webdevdocs/cssdocs.html">CSS Documentation</a></li>
+            <li><a href="webdevdocs/jsdocs.html">JavaScript Documentation</a></li>
+        </ul>
         <div class="back-button" onclick="goBack()">Back to Blog</div>
     </section>
 
